--- a/youtube_downloader.ipynb
+++ b/youtube_downloader.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "youtube_downloader.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVe6AI18FLTKBgSxUeWVrK",
+      "authorship_tag": "ABX9TyPl3m8JfBq/K/bmkJR8WNT+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8F0bPxoCUbbd",
-        "outputId": "27004c8a-db7a-4ebc-ab77-841bfdc09f04"
+        "outputId": "5e0d8815-67b0-4bba-8c2f-3ceef35b110e"
       },
       "outputs": [
         {
@@ -48,14 +48,14 @@
         }
       ],
       "source": [
-        "!pip install pytube\n",
+        "!pip install pytube #instalação da biblioteca pytube\n",
         "from pytube import YouTube, streams\n",
         "\n",
-        "url = 'https://www.youtube.com/watch?v=i9NOkjmBszo&ab_channel=BaguaRecords'\n",
+        "url = 'https://www.youtube.com/watch?v=i9NOkjmBszo&ab_channel=BaguaRecords' # URL do video escolhido.\n",
         "video = YouTube(url)\n",
-        "stream = video.streams.get_highest_resolution()\n",
+        "stream = video.streams.get_highest_resolution() # Comando usado para baixar o video na maior qualidade possivel\n",
         "\n",
-        "stream.download(output_path='C:/Users/Unesp/Desktop')\n",
+        "stream.download(output_path='C:/Users/Unesp/Desktop') # DESTINO/PASTA onde será salvo o video\n",
         "\n",
         "print(\"Download Concluido!!!\")"
       ]
